feat: update trigger of vadnet

--- a/test_apps/esp-sr/main/CMakeLists.txt
+++ b/test_apps/esp-sr/main/CMakeLists.txt
@@ -8,7 +8,7 @@ set(srcs
 
 idf_component_register(SRCS ${srcs}
                     INCLUDE_DIRS "." "samples"
-                    REQUIRES unity esp-sr
+                    REQUIRES unity esp-sr esp_timer
                     WHOLE_ARCHIVE)
 
 target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
