feat: support AEC on esp32c5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,24 @@ if((${IDF_TARGET} STREQUAL "esp32s3") OR (${IDF_TARGET} STREQUAL "esp32p4") OR (
         endif()
     endif()
 
+elseif(${IDF_TARGET} STREQUAL "esp32c5")
+
+    set(srcs
+        "lib/${IDF_TARGET}/dummy.c"
+    )
+
+    set(include_dirs
+        "include/${IDF_TARGET}"
+    )
+
+    idf_component_register(SRCS ${srcs}
+                        INCLUDE_DIRS ${include_dirs}
+                        )
+    
+    component_compile_options(-ffast-math -O3 -Wno-error=format=-Wno-format)
+    add_prebuilt_library(esp_audio_processor "${CMAKE_CURRENT_SOURCE_DIR}/lib/${IDF_TARGET}/libesp_audio_processor.a")
+    target_link_libraries(${COMPONENT_LIB} PRIVATE esp_audio_processor)
+
 elseif((${IDF_TARGET} STREQUAL "esp32s2") OR (${IDF_TARGET} STREQUAL "esp32c3") OR (${IDF_TARGET} STREQUAL "esp32c6"))
 #Only support TTS on esp32s2, esp32c3 and esp32c6
 
