ci: add ci for vadnet

--- a/test_apps/esp-sr/main/CMakeLists.txt
+++ b/test_apps/esp-sr/main/CMakeLists.txt
@@ -5,6 +5,7 @@ set(srcs
     "test_multinet.cpp"
     "test_afe.cpp"
     "test_mfcc.cpp"
+    "test_vadnet.cpp"
 )
 
 idf_component_register(SRCS ${srcs}
