--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,14 @@ before_script:
   - "test_apps/esp-sr/**/*"
   - "CMakeList.txt"
 
+.patterns-test_esp_sr: &patterns-test_esp32c5
+  - "lib/esp32c5/*"
+  - "include/esp32c5/*"
+  - "src/**/*"
+  - "model/**/*"
+  - "test_apps/esp-sr/**/*"
+  - "CMakeList.txt"
+
 .patterns-build_system: &patterns-build_system
   - "test_apps/build_apps.py"
   - "conftest.py"
@@ -74,6 +82,15 @@ before_script:
       changes: *patterns-build_system
     - <<: *if-dev-push
       changes: *patterns-test_esp_tts
+
+.rules:build:test_esp32c5:
+  rules:
+    - <<: *if-protected
+    - <<: *if-label-build
+    - <<: *if-dev-push
+      changes: *patterns-build_system
+    - <<: *if-dev-push
+      changes: *patterns-test_esp32c5
 
 .rules:build_docs:docs:
   rules:
@@ -135,6 +152,15 @@ build_esp_tts:
     matrix:
       - IMAGE: [espressif/idf:release-v5.3, espressif/idf:latest]
         EXAMPLES_PATH: "test_apps/esp-tts"
+
+build_esp32c5:
+  extends: 
+    - .build_test_template
+    - .rules:build:test_esp32c5
+  parallel:
+    matrix:
+      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:latest]
+        EXAMPLES_PATH: "test_apps/esp32c5"
 
 .test_template: &test_template
   image: DOCKER_TARGET_TEST_v5_0_ENV_IMAGE
