--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,9 +1,10 @@
-version: "2.1.1"
+version: "2.1.2"
 description: esp_sr provides basic algorithms for Speech Recognition applications
 url: https://github.com/espressif/esp-sr
 dependencies:
   idf: ">=5.0"
   espressif/esp-dsp: "1.6.0"
+  espressif/dl_fft: ">=0.1.0"
 files:
   exclude:
     - ".github"
