--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -143,7 +143,7 @@ build_esp_sr:
     - .rules:build:test_esp_sr
   parallel:
     matrix:
-      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:latest]
+      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:release-v5.5]
         EXAMPLES_PATH: "test_apps/esp-sr"
 
 
@@ -153,7 +153,7 @@ build_esp_tts:
     - .rules:build:test_esp_tts
   parallel:
     matrix:
-      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:latest]
+      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:release-v5.5]
         EXAMPLES_PATH: "test_apps/esp-tts"
 
 build_esp32c5:
@@ -162,7 +162,7 @@ build_esp32c5:
     - .rules:build:test_esp32c5
   parallel:
     matrix:
-      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:latest]
+      - IMAGE: [espressif/idf:release-v5.4, espressif/idf:release-v5.5]
         EXAMPLES_PATH: "test_apps/esp32c5"
 
 .test_template: &test_template
